<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mywallet.viewmodel.MainViewModel" />
    </data>

   <!-- <android.support.design.widget.CoordinatorLayout-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mywallet.ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                android:padding="0dp">

                <TextView
                    android:id="@+id/tv_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:drawableStart="@drawable/ic_left_arrow_white"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_monthtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:drawableEnd="@drawable/ic_right_arrow_white"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="20sp" />

            </RelativeLayout>

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />  <!-- app:mcv_showOtherDates="all"   app:mcv_selectionColor="#00F" -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="-100dp"
                android:background="@color/text"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@android:color/holo_orange_dark"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/add_income_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/text"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/settings_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:background="@color/text"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_expense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/add_expense_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="0dp"
                android:background="@color/text"
                android:visibility="visible" />

            <!--<android.support.design.widget.CoordinatorLayout-->
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <!--<android.support.design.widget.AppBarLayout-->
                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_orange_light">
                    <!--   android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" -->

                    <!--<android.support.design.widget.TabLayout-->
                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:tabGravity="fill"
                        app:tabIndicatorColor="@android:color/darker_gray"
                        app:tabMaxWidth="0dp"
                        app:tabMode="fixed"
                        app:tabTextAppearance="@style/DescriptionFontWhite" />

                </com.google.android.material.appbar.AppBarLayout>

                <!--<android.support.v4.view.ViewPager-->
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>

        <!--<android.support.design.widget.FloatingActionButton-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>